--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="chicken-adobo.html">Chicken Adobo</a>
+    <ul>
+        <li><a href="recipes/chicken-adobo.html">Chicken Adobo</a></li>
+        <li><a href="recipes/sinigang.html">Sinigang</a></li>
+    </ul>
 </body>
 </html>
