Added styles to all pages

--- a/recipes/chicken-adobo.html
+++ b/recipes/chicken-adobo.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Adobo</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -16,27 +17,35 @@
         This classic adobo recipe is simple to make and famous with all who have tasted it. It has been modified to be a
         bit more saucy than traditional adobo, it is delicious served over rice.
     </p>
-    <h3>Indgredients</h3>
-    <ul>
-        <li>Chicken leg</li>
-        <li>Garlic</li>
-        <li>Black Peppercorn</li>
-        <li>Distilled Vinegar</li>
-        <li>Oyster Sauce</li>
-        <li>Soy Sauce</li>
-        <li>Water</li>
-        <li>Vegetable Oil</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Heat the vegetable oil in a large skillet over medium-high heat. Cook chicken pieces until golden brown on
-            both sides, then remove. Stir in the onion and garlic; cook until they soften and brown, about 6 minutes.
+    <div class="ingredients">
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Chicken leg</li>
+            <li>Garlic</li>
+            <li>Black Peppercorn</li>
+            <li>Distilled Vinegar</li>
+            <li>Oyster Sauce</li>
+            <li>Soy Sauce</li>
+            <li>Water</li>
+            <li>Vegetable Oil</li>
+        </ul>
+    </div>
+    <div class="steps">
+        <h3>Steps</h3>
+        <ol>
+            <li>Heat the vegetable oil in a large skillet over medium-high heat. Cook chicken pieces until golden brown
+                on
+                both sides, then remove. Stir in the onion and garlic; cook until they soften and brown, about 6
+                minutes.
 
-        </li>
-        <li>Pour in vinegar and soy sauce, and season with garlic powder, black pepper, and bay leaf. Add the browned
-            chicken, increase the heat to high, and bring to a boil. Reduce heat to medium-low, cover, and simmer until
-            the chicken is tender and cooked through, 35 to 40 minutes.</li>
-    </ol>
+            </li>
+            <li>Pour in vinegar and soy sauce, and season with garlic powder, black pepper, and bay leaf. Add the
+                browned
+                chicken, increase the heat to high, and bring to a boil. Reduce heat to medium-low, cover, and simmer
+                until
+                the chicken is tender and cooked through, 35 to 40 minutes.</li>
+        </ol>
+    </div>
 </body>
 
 </html>
